fix: update z-index for dropdown

--- a/src/components/PlaygroundSelect/PlaygroundSelect.module.scss
+++ b/src/components/PlaygroundSelect/PlaygroundSelect.module.scss
@@ -11,4 +11,5 @@
 
 .dropdown {
     width: fit-content;
+    z-index: 10;
 }
